--- a/Fase 3 Codificacion/PracticaMP/nbproject/project.properties
+++ b/Fase 3 Codificacion/PracticaMP/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PracticaMP
-main.class=main.PracticaMP
+main.class=practicamp.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
