--- a/Fase 3 Codificacion/PracticaMP/nbproject/project.properties
+++ b/Fase 3 Codificacion/PracticaMP/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=practicamp.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
