--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Fase 3 Codificacion/PracticaMP/nbproject/private/
 /Fase 3 Codificacion/PracticaMP/build/
 /Fase 3 Codificacion/PracticaMP/dist/
+/Fase 3 Codificacion/PracticaMP/archivos/
